# onyx-legacy

./: .gitignore  CONTRIBUTING.md  PHASE_8_CHECKLIST.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
infrastructure/: README.md
infrastructure/api/: .env.example  Cargo.toml  Dockerfile
infrastructure/api/src/: main.rs  templates.rs
infrastructure/blind-cache/: Cargo.toml  Dockerfile
infrastructure/blind-cache/src/: main.rs
infrastructure/deploy/: Caddyfile  Caddyfile.pb  DEPLOY.md  DEPLOY_POCKETBASE.md  docker-compose.pb.yml  docker-compose.yml
infrastructure/deploy/pb_hooks/: limit_users.pb.js  migrate_keys.pb.js  migrate_users.pb.js  oauth_privacy.pb.js  reset_password.pb.js
infrastructure/hocuspocus/: Dockerfile  index.js  package.json
infrastructure/home-station/: Cargo.toml  Dockerfile
infrastructure/home-station/src/: main.rs
public/: site.webmanifest
scripts/: git-cleanup.sh  init_pb_schema.js  outlook_onyx_inject.js  reorganize.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  android-build.gradle.kts  tauri.conf.json
src-tauri/capabilities/: android.json  default.json  ios.json  outlook.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  cloud.rs  commands.rs  crypto.rs  database.rs  doc_store.rs  email.rs  email_cache.rs  email_client.rs  home_station.rs  lib.rs  media.rs  messaging.rs  messaging_v2.rs  network.rs  onyx_outlook.rs  p2p_sync.rs  photos.rs  ratchet.rs  relay_config.rs  sentinel.rs  shield.rs  sync.rs
src/__tests__/: setup.ts
src/__tests__/lib/: flashcards.test.ts  templates.test.ts
src/__tests__/services/: CalendarService.test.ts
src/__tests__/utils/: smartMath.test.ts
src/components/auth/: AuthForms.tsx  AuthModal.tsx
src/components/calendar/: CalendarView.tsx
src/components/canvas/: CanvasView.tsx
src/components/cloud/: CloudView.tsx
src/components/editor/: BacklinksPanel.tsx  CollectionView.tsx  Editor.tsx  FlashcardView.tsx  PropertiesPanel.tsx  PropertyPills.tsx  RecallBar.tsx  SessionBar.tsx  SlidesView.tsx  TeachBackView.tsx  TodayPage.tsx  TopicQuery.tsx  TranscriptionPanel.tsx  TrashView.tsx  VersionHistoryPanel.tsx
src/components/editor/tiptap/: BubbleMenu.tsx  NoteLinkChip.tsx  NoteLinkSuggestion.tsx  PainterPalette.tsx  QueryBlockView.tsx  SlashMenu.tsx  SmartMathPopup.tsx  TiptapEditor.tsx  TiptapFindWidget.tsx  Toolbar.tsx  index.ts  tiptap.css
src/components/editor/tiptap/extensions/: BlockId.ts  CalloutNode.ts  DragHandle.ts  FontSize.ts  MarkdownShortcuts.ts  MathBlockNode.ts  NoteLink.ts  QueryBlock.ts  RecallMark.ts  SearchReplace.ts  SlashCommands.ts  SmartMathExtension.ts
src/components/email/: AccountSetup.tsx  ContextMenu.tsx  EmailView.tsx  EmailViewer.tsx  InboxTabs.tsx  MiniComposer.tsx  SpamAnalyzer.tsx  ThreadList.tsx  UndoToast.tsx
src/components/layout/: BottomSheet.tsx  BottomTabBar.tsx  MobileShell.tsx  MobileToolbar.tsx  StackNavigator.tsx
src/components/messages/: MessagesView.tsx
src/components/passwords/: PasswordsView.tsx
src/components/photos/: PhotosView.tsx
src/components/questions/: QuestionLibrary.tsx
src/components/settings/: FeaturesPage.tsx  SubscriptionPanel.tsx
src/components/settings/v2/: SettingsModal.tsx  SettingsSidebar.tsx
src/components/settings/v2/tabs/: AboutTab.tsx  AccountTab.tsx  AppearanceTab.tsx  CloudTab.tsx  DataTab.tsx  EditorTab.tsx  FeaturesTab.tsx  KeybindsTab.tsx  PhotosTab.tsx  SecurityTab.tsx  SyncTab.tsx
src/components/ui/: AccountPanel.tsx  ErrorBoundary.tsx  LockModal.tsx  NoteTypePicker.tsx  OnboardingFlow.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  SyncStatusIndicator.tsx  TabBar.tsx  Titlebar.tsx  UnlockScreen.tsx
src/contexts/: P2PContext.tsx  SettingsContext.tsx  SyncContext.tsx  VaultContext.tsx  WorkspaceContext.tsx
src/data/: mathSymbols.ts
src/hooks/: useBlockDocument.ts  useEditor.ts  useFeature.ts  useLiveEmails.ts  useLoroStore.ts  usePlatform.ts  useSwipeGesture.ts  useYjsStore.ts
src/lib/: autoTags.ts  flashcards.ts  noteIcons.tsx  notifications.ts  pocketbase.ts  templates.ts  today.ts
src/lib/features/: featureRegistry.ts
src/lib/painter/: autoPaint.ts  paintTypes.ts
src/lib/questions/: questionTypes.ts
src/services/: CalendarService.ts  DeviceService.ts  EmailAuthService.ts  PasskeyService.ts  PasswordService.ts  SecurityService.ts  SubscriptionService.ts  VersionHistoryService.ts
src/store/: blockDocument.ts  canvasStore.ts  cloudStore.ts  emailStore.ts  featureStore.ts  messagingStore.ts  painterStore.ts  photosStore.ts  questionStore.ts  recallStore.ts  sessionStore.ts  slidesStore.ts  teachBackStore.ts  todayStore.ts  transcriptionStore.ts
src/types/: block.ts  index.ts  sync.ts
src/utils/: smartMath.ts
