[package]
name = "onyx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "onyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
trash = "5"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dotenv = "0.15"
reqwest = { version = "0.13.2", features = ["json"] }
tauri-plugin-oauth = "2.0.0"
tauri-plugin-updater = "2"
base64 = "0.22"

