[package]
name = "onyx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "onyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = { version = "2.10.2", features = ["unstable"] }
tauri-plugin-opener = "2"  # stays on latest 2.x
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dotenv = "0.15"
tauri-plugin-oauth = "2.0.0"
tauri-plugin-notification = "2"
base64 = "0.22"
url = "2"
regex-lite = "0.1"

[lints.rust]
unused_mut = "allow"

[profile.release]
opt-level = "s"          # Optimize for size (ideal for mobile APK)
lto = "fat"              # Full cross-crate LTO — max dead-code elimination
codegen-units = 1        # Single codegen unit — best optimisation, slower compile
strip = true             # Strip ALL symbols (debug + symbol table) — saves ~2-4MB
panic = "abort"          # No unwind tables — smaller binary

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
trash = "5"
hostname = "0.4"
tauri-plugin-updater = "2"
# Email/SMTP/IMAP — desktop only (heavy deps, ~10MB+ in binary)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "pool", "hostname"] }
reqwest = { version = "0.13.2", features = ["json", "multipart", "form"] }
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["rustls-tls"] }
imap-proto = "0.16"
mailparse = "0.14"
