[package]
name = "onyx-blind-cache"
version = "0.1.0"
edition = "2021"
description = "Onyx Blind Cache — encrypted blob relay for offline sync"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sled = "0.34"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
